# dispatch-py

./: .coveragerc  .gitignore  LICENCE.txt  LICENSE.md  README.md  SUMMARY.md  mypy.ini  pylintrc  pyproject.toml  pytest.ini  requirements.txt  run_dispatch.py  run_simulated_tests.py  setup.py  start_proxy.py  test_connection.py  test_proxy.py
.github/workflows/: Build & Release.yml  wheels.yml
dispatch/: __init__.py  debug.py  list.py  main.py  net.py  server.py  socks.py  test_connection.py
dispatch/dispatcher/: __init__.py  base.py  weighted_rr.py
tests/: __init__.py  conftest.py  network_simulator.py  socket_patcher.py  test_debug.py  test_dispatcher.py  test_dispatcher_base.py  test_dispatcher_weighted_rr.py  test_end_to_end.py  test_error_handling.py  test_list.py  test_main.py  test_multi_interface.py  test_multi_request.py  test_net.py  test_network_simulator.py  test_network_simulator_core.py  test_performance.py  test_proxy.py  test_proxy_connection.py  test_server.py  test_simulated_multi_interface.py  test_socks.py  test_start_proxy.py  test_utils.py  test_weighted_rr.py
